fix: layout issue in index page

--- a/css/ca2.css
+++ b/css/ca2.css
@@ -36,12 +36,6 @@ color: white
   margin-left: auto;
 }
 
-#nav-container {
-  display: flex;
-  flex-wrap: nowrap;
-  justify-content: space-between;
-  align-items: center;
-}
 
 .custom-icon {
 color: white; 
